plugins {
	id "java-library"
	id "eclipse"
	id "java"
	id "org.openjfx.javafxplugin" version "0.0.10"
}

repositories {
	mavenCentral()
	maven {
		url "https://libraries.minecraft.net"
	}
	maven {
		url uri("${projectDir}/maven/repositories")
	}
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

javafx {
	version = "17"
	modules = [ "javafx.controls" ]
}

compileJava {
	sourceCompatibility = "17"
	targetCompatibility = "17"
	options.compilerArgs << "-parameters"
}

println("Java: " + System.getProperty("java.version") + " JVM: " + System.getProperty("java.vm.version") + "Java Runtime:" + System.getProperty("java.runtime.version"))

dependencies {
	// Local
	implementation "org.controlsfx:ControlsFX:1.1" // Fx
	implementation "net.luis:LUtils:1.6" // Utility
	implementation "net.luis.fxutils:FxUtils:1.7" // Fx Utility
	// Google
	implementation "com.google.guava:guava:31.0.1-jre" // Utility
	implementation "com.google.code.gson:gson:2.8.9" // Json
	// Apache
	implementation "org.apache.logging.log4j:log4j-api:2.14.1" // Logging
	implementation "org.apache.logging.log4j:log4j-core:2.14.1" // Logging
	implementation "org.apache.commons:commons-lang3:3.0" // Utility
	implementation "org.apache.commons:commons-email:1.5" // E-Mail
	implementation "commons-codec:commons-codec:1.15" // Crypting
	// Netty
	implementation "io.netty:netty-all:4.1.25.Final" // Network
	// Other
	implementation "net.sf.jopt-simple:jopt-simple:5.0.4" // Startup
	implementation "com.mojang:datafixerupper:4.0.26" // Codec/Json helper
	implementation "org.jetbrains:annotations:23.0.0" // Annotations
}

task runClient(type:JavaExec) {
	group = "runs"
	main = "net.vgc.Main"
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--client", "--gameDir", file("run/client"), "--resourceDir", file("assets"), "--accountHost", "localhost", "--accountPort", "8081")
	args("--instantLoading", "true", "--safeLoading", "false")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task runServer(type:JavaExec) {
	group = "runs"
	main = "net.vgc.Main"
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--server", "--gameDir", file("run/server"), "--resourceDir", file("assets"), "--host", "localhost", "--port", "8080", "--language", "en_us")
	args("--admin", "00000000-0000-014b-0000-00000000017d")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task runAccount(type:JavaExec) {
	group = "runs"
	main = "net.vgc.Main"
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	args("--debugMode", "false", "--ide", "--account", "--gameDir", file("run/account_server"), "--resourceDir", file("assets"), "--host", "localhost", "--port", "8081", "--language", "en_us")
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task runTest(type:JavaExec) {
	group = "test runs"
	main = "net.vgc.Test"
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

task runFxTest(type:JavaExec) {
	group = "test runs"
	main = "net.vgc.FxTest"
	classpath = sourceSets.main.runtimeClasspath
	enableAssertions = true
	jvmArgs("--module-path", classpath.asPath, "--add-modules", "javafx.controls")
}

wrapper {
    gradleVersion = "7.3"
    distributionType = Wrapper.DistributionType.ALL
}

jar {
	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
	manifest {
		attributes([
			"Main-Class": "net.vgc.Main",
			"Built-By": "Luis Staudt, (Felix Stenzel and Luca Loos)",
			"Multi-Release": "true"
		])
	}
	from {
    	configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  	}
}
